cluster/athens/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athens
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - name: athens
          image: docker.io/gomods/athens:v0.11.0
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: data
      enableServiceLinks: false
      serviceAccountName: athens
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: athens
