cluster/athens/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: athens
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
